# FastNotepad

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-07-10-fast-win32-notepad-design.md
src/: encoding.rs  file_io.rs  lib.rs  main.rs  render.rs  settings.rs  tabs.rs  view.rs
src/app/: find_ui.rs  mod.rs  print_ui.rs
src/buffer/: document.rs  line_index.rs  mod.rs  piece_table.rs  undo.rs
src/language/: detect.rs  json.rs  markdown.rs  mod.rs  unknown.rs
tests/: large_file.rs
