[package]
name = "fast-notepad"
version = "0.1.0"
edition = "2021"
description = "Fast Windows notepad with mmap piece-table text engine"
license = "MIT"
readme = "README.md"
keywords = ["notepad", "editor", "windows", "win32", "text"]
categories = ["text-editors", "gui"]

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Xps",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
